<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!-- WARNING: Eclipse auto-generated file.
              Any modifications will be overwritten.
              To include a user specific buildfile here, simply create one in the same
              directory with the processing instruction <?eclipse.ant.import?>
              as the first entry and export the buildfile again. --><project basedir="." default="build" name="KickAppsIO">
    <property environment="env"/>
    <property name="ECLIPSE_HOME" value="../../eclipse/"/>
    <property name="debuglevel" value="source,lines,vars"/>
    <property name="target" value="11"/>
    <property name="source" value="11"/>
    <path id="Maven Dependencies.libraryclasspath">
        <pathelement location="../../.m2/repository/org/openjfx/javafx-controls/15.0.1/javafx-controls-15.0.1.jar"/>
        <pathelement location="../../.m2/repository/org/openjfx/javafx-controls/15.0.1/javafx-controls-15.0.1-win.jar"/>
        <pathelement location="../../.m2/repository/org/openjfx/javafx-graphics/15.0.1/javafx-graphics-15.0.1.jar"/>
        <pathelement location="../../.m2/repository/org/openjfx/javafx-graphics/15.0.1/javafx-graphics-15.0.1-win.jar"/>
        <pathelement location="../../.m2/repository/org/openjfx/javafx-base/15.0.1/javafx-base-15.0.1.jar"/>
        <pathelement location="../../.m2/repository/org/openjfx/javafx-base/15.0.1/javafx-base-15.0.1-win.jar"/>
        <pathelement location="../../.m2/repository/org/openjfx/javafx-fxml/15.0.1/javafx-fxml-15.0.1.jar"/>
        <pathelement location="../../.m2/repository/org/openjfx/javafx-fxml/15.0.1/javafx-fxml-15.0.1-win.jar"/>
        <pathelement location="../../.m2/repository/com/microsoft/sqlserver/mssql-jdbc/6.1.0.jre8/mssql-jdbc-6.1.0.jre8.jar"/>
        <pathelement location="../../.m2/repository/com/microsoft/azure/azure-keyvault/0.9.3/azure-keyvault-0.9.3.jar"/>
        <pathelement location="../../.m2/repository/com/microsoft/azure/azure-core/0.9.3/azure-core-0.9.3.jar"/>
        <pathelement location="../../.m2/repository/commons-codec/commons-codec/1.10/commons-codec-1.10.jar"/>
        <pathelement location="../../.m2/repository/commons-lang/commons-lang/2.6/commons-lang-2.6.jar"/>
        <pathelement location="../../.m2/repository/javax/mail/mail/1.4.5/mail-1.4.5.jar"/>
        <pathelement location="../../.m2/repository/javax/activation/activation/1.1/activation-1.1.jar"/>
        <pathelement location="../../.m2/repository/com/sun/jersey/jersey-client/1.13/jersey-client-1.13.jar"/>
        <pathelement location="../../.m2/repository/com/sun/jersey/jersey-core/1.13/jersey-core-1.13.jar"/>
        <pathelement location="../../.m2/repository/com/sun/jersey/jersey-json/1.13/jersey-json-1.13.jar"/>
        <pathelement location="../../.m2/repository/org/codehaus/jettison/jettison/1.1/jettison-1.1.jar"/>
        <pathelement location="../../.m2/repository/stax/stax-api/1.0.1/stax-api-1.0.1.jar"/>
        <pathelement location="../../.m2/repository/com/sun/xml/bind/jaxb-impl/2.2.3-1/jaxb-impl-2.2.3-1.jar"/>
        <pathelement location="../../.m2/repository/javax/xml/bind/jaxb-api/2.2.2/jaxb-api-2.2.2.jar"/>
        <pathelement location="../../.m2/repository/javax/xml/stream/stax-api/1.0-2/stax-api-1.0-2.jar"/>
        <pathelement location="../../.m2/repository/org/codehaus/jackson/jackson-core-asl/1.9.2/jackson-core-asl-1.9.2.jar"/>
        <pathelement location="../../.m2/repository/org/codehaus/jackson/jackson-mapper-asl/1.9.2/jackson-mapper-asl-1.9.2.jar"/>
        <pathelement location="../../.m2/repository/org/codehaus/jackson/jackson-jaxrs/1.9.2/jackson-jaxrs-1.9.2.jar"/>
        <pathelement location="../../.m2/repository/org/codehaus/jackson/jackson-xc/1.9.2/jackson-xc-1.9.2.jar"/>
        <pathelement location="../../.m2/repository/org/apache/httpcomponents/httpclient/4.3.6/httpclient-4.3.6.jar"/>
        <pathelement location="../../.m2/repository/org/apache/httpcomponents/httpcore/4.3.3/httpcore-4.3.3.jar"/>
        <pathelement location="../../.m2/repository/commons-logging/commons-logging/1.1.3/commons-logging-1.1.3.jar"/>
        <pathelement location="../../.m2/repository/javax/inject/javax.inject/1/javax.inject-1.jar"/>
        <pathelement location="../../.m2/repository/com/microsoft/azure/adal4j/1.0.0/adal4j-1.0.0.jar"/>
        <pathelement location="../../.m2/repository/com/nimbusds/oauth2-oidc-sdk/4.5/oauth2-oidc-sdk-4.5.jar"/>
        <pathelement location="../../.m2/repository/net/jcip/jcip-annotations/1.0/jcip-annotations-1.0.jar"/>
        <pathelement location="../../.m2/repository/org/apache/commons/commons-lang3/3.3.1/commons-lang3-3.3.1.jar"/>
        <pathelement location="../../.m2/repository/net/minidev/json-smart/1.1.1/json-smart-1.1.1.jar"/>
        <pathelement location="../../.m2/repository/com/nimbusds/lang-tag/1.4/lang-tag-1.4.jar"/>
        <pathelement location="../../.m2/repository/com/nimbusds/nimbus-jose-jwt/3.1.2/nimbus-jose-jwt-3.1.2.jar"/>
        <pathelement location="../../.m2/repository/org/bouncycastle/bcprov-jdk15on/1.51/bcprov-jdk15on-1.51.jar"/>
        <pathelement location="../../.m2/repository/com/google/code/gson/gson/2.2.4/gson-2.2.4.jar"/>
        <pathelement location="../../.m2/repository/org/slf4j/slf4j-api/1.7.5/slf4j-api-1.7.5.jar"/>
    </path>
    <path id="KickAppsIO.classpath">
        <pathelement location="target/classes"/>
        <pathelement location="target/test-classes"/>
        <path refid="Maven Dependencies.libraryclasspath"/>
    </path>
    <path id="run.App (1).classpath">
        <path refid="KickAppsIO.classpath"/>
        <path refid="Maven Dependencies.libraryclasspath"/>
    </path>
    <path id="run.Main (2).classpath">
        <path refid="KickAppsIO.classpath"/>
        <path refid="Maven Dependencies.libraryclasspath"/>
    </path>
    <target name="init">
        <mkdir dir="target/classes"/>
        <mkdir dir="target/test-classes"/>
        <copy includeemptydirs="false" todir="target/classes">
            <fileset dir="src/main/java">
                <exclude name="**/*.launch"/>
                <exclude name="**/*.xtend"/>
                <exclude name="**/*.java"/>
            </fileset>
        </copy>
        <copy includeemptydirs="false" todir="target/classes">
            <fileset dir="src/main/resources">
                <exclude name="**/*.launch"/>
                <exclude name="**/*.xtend"/>
                <exclude name="**/*.java"/>
                <exclude name="**"/>
            </fileset>
        </copy>
    </target>
    <target name="clean">
        <delete dir="target/classes"/>
        <delete dir="target/test-classes"/>
    </target>
    <target depends="clean" name="cleanall"/>
    <target depends="build-subprojects,build-project" name="build"/>
    <target name="build-subprojects"/>
    <target depends="init" name="build-project">
        <echo message="${ant.project.name}: ${ant.file}"/>
        <javac debug="true" debuglevel="${debuglevel}" destdir="target/classes" includeantruntime="false" source="${source}" target="${target}">
            <src path="src/main/java"/>
            <src path="src/main/resources"/>
            <exclude name="**"/>
            <classpath refid="KickAppsIO.classpath"/>
        </javac>
    </target>
    <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
    <target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">
        <copy todir="${ant.library.dir}">
            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
        </copy>
        <unzip dest="${ant.library.dir}">
            <patternset includes="jdtCompilerAdapter.jar"/>
            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
        </unzip>
    </target>
    <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
        <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
        <antcall target="build"/>
    </target>
    <target name="App (1)">
        <java classname="org.example.App" failonerror="true" fork="yes">
            <classpath refid="run.App (1).classpath"/>
        </java>
    </target>
    <target name="Main (2)">
        <java classname="application.Main" failonerror="true" fork="yes">
            <jvmarg line="--module-path &quot;C:\Users\casua\JavaFX\javafx-sdk-16\lib&quot; --add-modules javafx.controls,javafx.fxml"/>
            <classpath refid="run.Main (2).classpath"/>
        </java>
    </target>
</project>
